# ae_test_task

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/yr_forecast/: __init__.py  config.py  logging_config.py  main.py  rate_limiter.py
src/yr_forecast/api/: endpoints.py
src/yr_forecast/middleware/: __init__.py  rate_limit.py
src/yr_forecast/static/: index.html
src/yr_forecast/static/css/: style.css
src/yr_forecast/static/js/: app.js
src/yr_forecast/weather/: __init__.py  client.py  geocoding.py  models.py  service.py
