[tool.poetry]
name = "yr-forecast"
version = "0.1.0"
description = "Weather forecast service using yr.no API"
authors = ["plomitt <46419727+plomitt@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "yr_forecast", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.123.5"
httpx = "^0.28.1"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
cachetools = "^6.2.2"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
aiohttp = "^3.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"